# transportation

./: .coverage  .dockerignore  .env  .env.example  .gitignore  Dockerfile  alembic.ini  coverage.xml  db.sqlite3  manage.py  pyproject.toml  requirements.txt
.github/workflows/: security-gate.yml
alembic/: env.py
alembic/versions/: 20260213_01_initial_fastapi_schema.py  20260213_02_public_requests_and_invoice_updates.py  20260213_03_trip_invoice_link.py  20260215_04_add_company_trn.py  20260215_05_invoice_signatories_and_custom_numbers.py  20260215_06_signature_image_blob_storage.py  20260216_07_drivers_and_trip_extensions.py  20260217_08_transport_company_tenancy.py  20260217_09_admin_users_password_hash.py  20260217_10_employee_salaries.py  20260217_11_driver_cash_handovers.py  20260217_12_admin_refresh_tokens.py  20260218_13_admin_user_token_version.py
docs/: deployment_security.md
frontend/: .env.example  .env.production  Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  main.tsx
scripts/: deploy.production.example.sh  deploy.sh  docker-compose.production.example.yml  start.sh
sikar_cargo_transport/: asgi.py  settings.py  wsgi.py
src/: main.py
src/api/: deps.py
src/core/: __init__.py  audit.py  auth.py  auth_protection.py  config.py  exceptions.py  logging.py  middleware.py  refresh_tokens.py  request_limits.py  (+1 more)
tests/: conftest.py  test_auth_rate_limit.py  test_auth_session_lifecycle.py  test_auth_smoke.py  test_companies_api.py  test_driver_cash_handovers_api.py  test_employee_salaries_api.py  test_export_auth_hardening_and_audit.py  test_invoice_pdf_service.py  test_invoice_service.py  test_invoices_api.py  test_public_requests_api.py  test_request_protection.py  test_security_config_validation.py  test_security_http.py  test_signature_encryption_integrity.py  test_signature_security.py  test_trips_api.py
website/: admin.py  forms.py  models.py  urls.py  views.py
(+172 files in other folders)
